[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ammg"
version = "0.2.1"
description = "A tool for appending metadata from Apple Music to music files."
authors = [
  { name="Raphael Tannous", email="raphaeltannous@proton.me" },
]
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.8"

keywords = [
  "music",
  "metadata",
  "mutagen",
  "apple music"
]

classifiers = [
  "Development Status :: 4 - Beta",
]

dependencies = [
  "requests",
  "mutagen",
]

[project.urls]
Homepage = "https://github.com/rofe33/ammg"
Issues = "https://github.com/rofe33/ammg/issues"

[project.scripts]
ammg = "ammg.ammg:main"
